--- a/parts/meta.html
+++ b/parts/meta.html
@@ -6,3 +6,13 @@
 	<meta name="google-site-verification" content="tfDdSA0Qb_2Rai1uJibOBXYekD84qIhhh4w9rRGTI_Q" />
 	<meta name='url' content="https://timcole.me" />
 	<meta name="twitter:creator" content="@ModestTim" />
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-35805236-4', 'auto');
+		ga('send', 'pageview');
+	</script>
